# rhwp

./: .gitignore  CLAUDE.md  Cargo.toml
.github/workflows/: deploy-pages.yml
mydocs/feedback/: task_m100_102_impl_review.md
mydocs/manual/: e2e-cdp.md  publish_guide.md
mydocs/orders/: 20260328.md  20260330.md  20260410.md  20260411.md
mydocs/plans/: task_3.md  task_m100_102.md  task_m100_102_impl.md  task_m100_105.md  task_m100_85.md  task_m100_85_impl.md  task_m100_88.md  task_m100_88_impl.md
mydocs/report/: task_m100_102_report.md
mydocs/tech/: incremental_layout_research.md  incremental_relayout_design.md
mydocs/troubleshootings/: hwpx_lineseg_reflow_trap.md
mydocs/working/: task_3_step1_complete.md  task_m100_102_stage1.md  task_m100_85_stage1.md  task_m100_88_stage1.md
npm/editor/: README.md  index.d.ts  index.js  package.json
rhwp-chrome/sw/: thumbnail-extractor.js
rhwp-desktop/: package.json
rhwp-desktop/src-tauri/: Cargo.toml  tauri.conf.json
rhwp-desktop/src-tauri/icons/: icon.icns
rhwp-safari/src/: background.js  content-script.js
rhwp-studio/: package.json  vite.config.ts
rhwp-studio/src/: main.ts
rhwp-studio/src/ui/: about-dialog.ts
rhwp-vscode/: CHANGELOG.md  package.json
samples/: re-03-latin-only.hwp  re-04-digit-only.hwp  re-06-punctuation.hwp  tac-img-02.hwpx
src/: main.rs
src/renderer/: font_metrics_data.rs
src/renderer/composer/: lineseg_compare_tests.rs
src/renderer/layout/: paragraph_layout.rs  table_layout.rs
src/renderer/pagination/: engine.rs  state.rs
